# Laba4

./: CMakeLists.txt  LZ78_DC.cpp  LZ78_DC.h  main.cpp
