cmake_minimum_required(VERSION 3.17)
project(Laba4)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS "-static")
add_executable(Laba4 main.cpp C:/Users/ramp8/Laboratorni_Z_OP/Laba4/LZ78_C.h C:/Users/ramp8/Laboratorni_Z_OP/Laba4/LZ78_C.cpp C:/Users/ramp8/Laboratorni_Z_OP/Laba4/LZ78_DC.cpp C:/Users/ramp8/Laboratorni_Z_OP/Laba4/LZ78_DC.h)